--- a/README.org
+++ b/README.org
@@ -5,4 +5,4 @@ All my [[https://istaroth.cc][istaroth.cc]] setup goes here..
 | address            | service   |
 |--------------------+-----------|
 | [[http://webirc.istaroth.cc/][webirc.istaroth.cc]] | thelounge |
-| [[http://illcow.istaroth.cc/][illcow.istaroth.cc]] | jellyfin  |
+| [[http://navi.istaroth.cc/][navi.istaroth.cc]]   | navidrome |
